--- a/psychology-api/package.json
+++ b/psychology-api/package.json
@@ -45,6 +45,8 @@
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.0",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.11.24",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
